--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mpxx1.github.io/phys-al-03/",
+  "homepage": "./",
   "name": "phys_emul_3",
   "private": true,
   "version": "0.0.0",
